--- a/src/templates/phone_book/show.html.twig
+++ b/src/templates/phone_book/show.html.twig
@@ -8,10 +8,6 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ phone_book.id }}</td>
-            </tr>
-            <tr>
                 <th>Name</th>
                 <td>{{ phone_book.name }}</td>
             </tr>
@@ -22,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('phone_book_index') }}">back to list</a>
+    <a class="btn btn-secondary" href="{{ path('phone_book_index') }}">back to list</a>
 
-    <a href="{{ path('phone_book_edit', {'id': phone_book.id}) }}">edit</a>
+    <a class="btn btn-primary" href="{{ path('phone_book_edit', {'id': phone_book.id}) }}">edit</a>
 
     {{ include('phone_book/_delete_form.html.twig') }}
 {% endblock %}
