--- a/src/templates/phone_book/edit.html.twig
+++ b/src/templates/phone_book/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('phone_book/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('phone_book_index') }}">back to list</a>
+    <a class="btn btn-secondary" href="{{ path('phone_book_index') }}">back to list</a>
 
     {{ include('phone_book/_delete_form.html.twig') }}
 {% endblock %}
