--- a/src/templates/phone_book/_delete_form.html.twig
+++ b/src/templates/phone_book/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('phone_book_delete', {'id': phone_book.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ phone_book.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger my-2">Delete</button>
 </form>
