--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -10,7 +10,28 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand"">PhoneBook</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ path('phone_book_index') }}">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                    <div class="btn-group">
+                        {% if app.user %}
+                                <a class="btn btn-primary" href="{{ path('app_logout') }}">Logout</a>
+                        {% else %}
+                            <a class="btn btn-secondary" href="{{ path('app_login') }}">Login</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </nav>
+        <div class="container my-5">
             {% block body %}{% endblock %}
             {% block javascripts %}{% endblock %}
         </div>
