--- a/src/templates/security/login.html.twig
+++ b/src/templates/security/login.html.twig
@@ -41,6 +41,9 @@
                 <button class="btn btn-lg btn-primary" type="submit">
                     Sign in
                 </button>
+                <a href="{{ path('app_register') }}" class="btn btn-lg btn-primary" type="submit">
+                    Registrate
+                </a>
             </form>
         </div>
     </div>
